# Cmake-Learning

./: .gitmodules
2_Cmake/10_DOXYGEN/: CMakeLists.txt  Makefile
2_Cmake/10_DOXYGEN/app/: main.cc
2_Cmake/10_DOXYGEN/src/my_lib/: my_lib.cc  my_lib.h
2_Cmake/11.UNITTEST/: CMakeLists.txt
2_Cmake/11.UNITTEST/cmake/: AddGitSubmodule.cmake  Docs.cmake
2_Cmake/11.UNITTEST/configured/: config.hpp.in
2_Cmake/11.UNITTEST/src/my_lib/: my_lib.cc  my_lib.h
2_Cmake/11.UNITTEST/tests/: CMakeLists.txt  main.cc
2_Cmake/1_HelloWorld/: CMakeLists.txt
2_Cmake/2_BASICPROJECT/: CMakeLists.txt
2_Cmake/3_INTERMEDIATEPROJECT/: CMakeLists.txt
2_Cmake/3_INTERMEDIATEPROJECT/app/: main.cc
2_Cmake/4_VARIABLESOPTIONS/: CMakeLists.txt
2_Cmake/5_CONFIGUREFILE/: CMakeLists.txt
2_Cmake/5_CONFIGUREFILE/app/: main.cc
2_Cmake/6_SOURCESANDHEADERS/app/: main.cc
2_Cmake/7_EXTERNALGIT/: CMakeLists.txt
2_Cmake/7_EXTERNALGIT/app/: main.cc
2_Cmake/7_EXTERNALGIT/src/my_lib/: CMakeLists.txt
2_Cmake/8_FETCHCONTENT/: CMakeLists.txt
2_Cmake/8_FETCHCONTENT/app/: main.cc
2_Cmake/8_FETCHCONTENT/src/my_lib/: my_lib.h
2_Cmake/9_CONAN/: CMakeLists.txt
